syntax = "proto3";

option go_package = "/user";

package user;

message GetMemberParam {
    int64 id = 1;
}

message MemberResponse {
    int64 id = 1;
    string name = 2;
}

message MemberError {
    int64 code = 1;
    string msg = 2;
}


service Member {
    rpc GetMember (GetMemberParam) returns (MemberResponse) {}
}